# logInvestigator

./: .gitignore  Dockerfile  Pipfile  README.md  pyproject.toml  template.env
app/: main.py
app/agents/: llm_engine.py  orchestrator.py
app/agents/knowledge/: incidents.json
app/agents/prompts/: component_prompt.py  root_cause_prompt.py  severity_prompt.py
app/agents/tools/: component_detector.py  error_extractor.py  knowledge_retriever.py  root_cause_agent.py  severity_tool.py  stack_analyzer.py
app/api/: routes.py
app/core/: config.py  logger.py  schemas.py
app/services/: incident_service.py  log_parser.py
app/utils/: regex_patterns.py
tests/: test_agents.py
