[project]
name = "loginvestigator"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
readme = "README.md"
dependencies = [
    "fastapi>=0.136.3",
    "openai>=2.38.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = []

[tool.uv]
package = false
default-groups = "all"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
